# odds-value-v2

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 4609e20272e9_initial_models.py  4c6b7d3f2a1e_rename_team_game_state_table.py  5b0a8f1c7d2a_add_team_aliases.py  806d78e24b6f_add_provider_team.py  efc138bc0f7c_adjust_feature_table_names.py  f0ddfb38a2b6_initial_models.py
infra/envs/prod/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
src/odds_value/cli/: app.py  common.py  features.py  ingest.py  model.py  seed_provider_data.py
src/odds_value/core/: config.py  text.py
src/odds_value/db/: __init__.py  base.py  engine.py  enums.py
src/odds_value/db/models/: __init__.py
src/odds_value/db/models/core/: game.py  league.py  provider_league.py  provider_sport.py  provider_team.py  (+4 more)
src/odds_value/db/repos/: base.py
src/odds_value/features/: __init__.py
src/odds_value/features/football/: __init__.py  team_game_state_builder.py
src/odds_value/ingestion/: api_sports_season.py  dates.py
src/odds_value/ingestion/football/: __init__.py  nfl_calendar.py
src/odds_value/modeling/football/: dataset.py  splits.py  train_point_diff.py
tests/: test_api_sports_rate_limiter.py  test_api_sports_season_ingest.py  test_api_sports_team_game_stats_ingest.py  test_cli_smoke.py  test_football_game_dataset.py  test_football_team_game_state_builder.py  test_modeling_splits.py  test_odds_api_client_historical.py  test_odds_api_nfl_odds_ingest.py
(+37 files in other folders)
